--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+  Copyright © 2025  MUHAMMAD ISMAYIL 
+  All rights reserved.
+  Unauthorized copying or distribution is strictly prohibited.
+*/
 
         :root {
             --primary-color: #4285f4;
